<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_planner"
        android:icon="@drawable/calendar"
        android:title="@string/title_planner" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/group"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_businesscard"
        android:icon="@drawable/bussinesscard"
        android:title="@string/title_businesscard" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/mypage"
        android:title="@string/title_account" />
</menu>
